cluster/traefik/10-deployment.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: traefik
    namespace: traefik
  spec:
    selector:
      matchLabels:
        app.kubernetes.io/instance: traefik-traefik
        app.kubernetes.io/name: traefik
    template:
      spec:
        automountServiceAccountToken: true
        containers:
        - name: traefik
          args:
          - --global.checknewversion
          - --global.sendanonymoususage
          - --entryPoints.metrics.address=:9100/tcp
          - --entryPoints.traefik.address=:9000/tcp
          - --entryPoints.web.address=:8000/tcp
          - --entryPoints.websecure.address=:8443/tcp
          - --entryPoints.doh.address=:3000/tcp
          - --entryPoints.dot.address=:853/tcp
          - --entryPoints.echo.address=:5000/tcp
          - --entryPoints.echosecure.address=:5003/tcp
          - --entryPoints.echosecure.http.tls=true
          - --api.dashboard=true
          - --ping=true
          - --metrics.prometheus=true
          - --metrics.prometheus.entrypoint=metrics
          - --providers.kubernetescrd
          - --providers.kubernetesingress
          - --entryPoints.websecure.http.tls=true
          - --log.level=INFO
          ports:
          - containerPort: 9100
            name: metrics
            protocol: TCP
          - containerPort: 9000
            name: traefik
            protocol: TCP
          - containerPort: 8000
            name: web
            protocol: TCP
          - containerPort: 8443
            name: websecure
            protocol: TCP
          #
          - name: doh
            containerPort: 3000
            protocol: TCP
          - name: dot
            containerPort: 853
            protocol: TCP
          # 
          - name: echo
            containerPort: 5000
            protocol: TCP
          - name: echosecure
            containerPort: 5003
            protocol: TCP
kind: List
