cluster/traefik/11-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: traefik
spec:
  ports:
  - name: dot
    port: 853
    protocol: TCP
    targetPort: dot
  - name: doh
    port: 3000
    protocol: TCP
  #
  - name: echo
    port: 5000
    protocol: TCP
  - name: echosecure
    port: 5003
    protocol: TCP
